[gd_scene load_steps=4 format=3 uid="uid://cmaieui7lrmx8"]

[ext_resource type="Texture2D" uid="uid://daw4n8ubk88qg" path="res://assets/ui/rewind_tutorial.png" id="1_6rvmq"]
[ext_resource type="Script" path="res://ui/rewind_tutorial.gd" id="1_uopld"]
[ext_resource type="Texture2D" uid="uid://5f6qomak6gfp" path="res://assets/ui/ss.png" id="2_yof6j"]

[node name="RewindTutorial" type="TextureRect"]
z_index = 3
offset_right = 912.0
offset_bottom = 752.0
texture = ExtResource("1_6rvmq")
script = ExtResource("1_uopld")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 24.0
offset_right = 864.0
offset_bottom = 712.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "Rewind"
horizontal_alignment = 1

[node name="Image" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("2_yof6j")
expand_mode = 3

[node name="TextBox" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
alignment = 1

[node name="Left" type="Button" parent="VBoxContainer/TextBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "<"

[node name="Text" type="RichTextLabel" parent="VBoxContainer/TextBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/line_separation = 10
theme_override_font_sizes/normal_font_size = 37
bbcode_enabled = true
text = "[center]Words Words Words
Words Words Words"

[node name="Right" type="Button" parent="VBoxContainer/TextBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = ">"

[node name="Close" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "Okay!!"

[connection signal="button_up" from="VBoxContainer/TextBox/Left" to="." method="_on_left_button_up"]
[connection signal="button_up" from="VBoxContainer/TextBox/Right" to="." method="_on_right_button_up"]
[connection signal="button_up" from="VBoxContainer/Close" to="." method="_on_close_button_up"]
